# SeaFile

./: .dockerfile  .dockerfilie  .drone.yml  .gitignore  Cargo.toml  README.md  dev.md  start.sh
.github/workflows/: main.yml  rust.yml
debug/: Develop.md  Guide.md  github-action.yml  rust-smb.dockerfile  shells.md
debug/seaFile/: Cargo.toml
debug/seaFile/src/: main.rs
debug/seaFile/src/user/: mod.rs
debug/smbUser/src/: main.rs
docs/: Samba 存储密码的位置。如何提取 Samba 用户名和密码.md  SeaFile部署架构.graffle
profiles/dev/: config.yaml
profiles/local/: config.yaml  log4rs.yaml
profiles/prod/: config.yaml  log4rs.yaml
profiles/test/: config.yaml
scripts/: create.sql
src/: lib.rs  main.rs  router.rs
src/boot/: c.rs  conf.rs  mod.rs
src/boot/middleware/: auth.rs  jwt.rs  mod.rs  trace.rs
src/module/: init.rs  mod.rs
src/module/auth/: api.rs  bs.rs  mod.rs
src/module/daisy/: api.rs  bs.rs  dao.rs  mod.rs
src/module/email/: mod.rs
src/module/file/: api.rs  bs.rs
src/module/filesystem/: async_monitor.rs  async_patrol_sweep.rs  mod.rs
src/module/ifile/: api.rs  bs.rs  dao.rs  mod.rs
src/module/samba/: mod.rs
src/module/signup/: bs.rs  dao.rs  mod.rs
src/module/user/: api.rs  bs.rs  dao.rs  mod.rs
src/module/utils/: crc_utils.rs  debug_aes.rs  encryption.rs  mod.rs  random.rs
webapp/: README.md  auto-import.d.ts  bun.lockb  components.d.ts  index.html  package-lock.json  package.json  vite.config.js  vite.config.mjs
webapp/src/: App.vue  main.js
webapp/src/api/: auth.js
webapp/src/components/: AppProvider.vue  DialogContent.vue  HelloWorld.vue  MessageContent.vue  RemoteScript.vue  _index.js  button.vue  index.js  input.vue  password.vue
webapp/src/directives/: directives.js  index.js
webapp/src/lang/: index.js
webapp/src/router/: index.js
webapp/src/rules/: index.js
webapp/src/store/: _index.js  avatar_store.js  index.js  user_store.js
webapp/src/style/: iconfont.css  iconfont.js
webapp/src/utils/: avatar.js  decamelize.js  objects.js  request.js  stringutils.js
webapp/src/views/: Header.vue  Home.vue  Login.vue  Play.vue  Show.vue
webapp/src/views/admin/: Index.vue  Storage.vue  Users.vue  _Profile.vue  _UserForm.vue  _Users.vue  dynamicRoute.js
webapp/src/views/personal/: Index.vue  Password.vue  Profile.vue  Usage.vue
webapp/src/views/settings/: Index.vue  Passwd.vue  UserForm.vue  Users.vue
