[package]
name = "seafile"
version = "0.1.0"
authors = ["xuguangyuansh <xuguangyuansh@126.com>"]
edition = "2021"
resolver = "2"

[profile.release]
panic = 'abort'
opt-level = 's'
# codegen-units = 1
# lto = true                # 开启，对编译速度影响较大

[profile.dev]
split-debuginfo = "unpacked"# 加快开发阶段的增量编译

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
actix-web = "4.2"             # actix-web main
actix-files = "0.6"
actix-web-lab = "0.18"
async-channel = "1.6"
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }
rayon = "1.6"
notify = "5.0.0-pre.16"
walkdir = "2"
#bytes = "0.5.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"          # load config.yaml
serde_json = "1.0"
#serde_qs = "0.7.0"
validator = { version = "0.16", features = ["derive", "phone"] }
log4rs = "1"                # log4rs for log
log = "0.4"
rbson = "2.0"
rbatis = { version = "^3", default-features = false, features = ["postgres", "runtime-async-std-rustls"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"        # json web token
aes = "0.8"
ctr = "0.9"
hex = "0.4"
bcrypt = "0.13"
rand = "0.8"                # Random
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
crc = "3.0"
regex = "1.5"
lazy_static = "1"
itertools = "0.10.5"
